# billy-walters-sports-analyzer

./: .env.example  .gitattributes  .gitignore  AGENTS.md  API_SPIDER_QUICK_START.md  BACKTEST_RESULTS_SUMMARY.md  BILLY_WALTERS_METHODOLOGY.md  BILLY_WALTERS_METHODOLOGY_AUDIT.md  CDP_INTEGRATION_SUMMARY.md  CHANGELOG.md  CHANGES_LOG.md  CHECK_OVERTIME_EDGES_GUIDE.md  CLAUDE.md  CLAUDE_CONFIG.md  CLICKMAP_NFL_STATUS.md  CLOUDFLARE_INVESTIGATION_REPORT.md  CODE_REVIEW_SUMMARY.md  COMPLETE_ENV_VARIABLES_LIST.md  CREATE_PR_INSTRUCTIONS.md  CRITICAL_QUESTIONS.md  DATA_COLLECTION_QUICK_REFERENCE.md  DATA_ORGANIZATION_COMPLETE.md  DATA_VALIDATION_CHECKLIST.md  DOCUMENTATION_AUDIT.md  DYNAMIC_WEEK_TRACKING_SUMMARY.md  EFACTOR_INTEGRATION_GUIDE.md  EMOJI_FIX_SUMMARY.md  ENVIRONMENT_VARIABLES_SUMMARY.md  ESPN_CFB_INDEX.md  ESPN_CFB_README.md  ESPN_CFB_URL_REFERENCE.md  ESPN_PHASE1_EXECUTION_SUMMARY.md  ESPN_ROADMAP_CHECKLIST.md  EXAMPLE_OUTPUT.md  FINAL_SUMMARY.md  FIX_SUMMARY_AND_FILES.md  FRIDAY_NCAAF_BACKTESTING_REPORT.md  HOUSEKEEPING_COMPLETE.md  HTML_DATA_MAPPING.md  HTML_STRUCTURE_ANALYSIS.md  (+159 more)
.claude/: AGENT_WORKFLOWS.md  COMMANDS_AND_HOOKS_SUMMARY.md  MCP_SETUP_GUIDE.md  README.md  SETTINGS_ENHANCEMENT_PROPOSALS.md  SETTINGS_GUIDE.md  SETTINGS_SUMMARY.md  TESTING_REPORT.md  billy_walters_analytics_prd.md  claude-desktop-config.hardened.json  claude-desktop-config.json  mcp.settings.json  openapi.json  settings.json  settings.local.json  status_line.py  test_mcp_server.py  walters_autonomous_agent.py  walters_mcp_server.py
.codex/: AGENTS.md  README.md  agents-utils.psm1  preflight.sh  super-run.ps1
.codex/backups/tools-20251106-204230/devtools-scout/: pyproject.toml
.codex/backups/tools-20251106-204230/devtools-scout/exports/: espn_scoreboard_20251106.parquet  massey_cfb_2025_wk11.csv  overtime_discover_20251106-185414.json
.codex/backups/tools-20251106-204230/devtools-scout/exports/massey_discover_20251106-185337_previews/: preview_1.json  preview_10.json  preview_15.json  preview_22.json  preview_26.json  preview_27.json  preview_32.json  preview_36.json  preview_37.json  preview_43.json  preview_45.json  preview_50.json  preview_57.json  preview_59.json  preview_6.json  preview_62.json  preview_98.json
.codex/backups/tools-20251106-204230/devtools-scout/exports/overtime_discover_20251106-185414_previews/: preview_1.json  preview_10.json  preview_14.json  preview_15.json  preview_3.json  preview_5.json  preview_6.json  preview_8.json  preview_9.json
.codex/backups/tools-20251106-204230/devtools-scout/src/codex_tools/: __init__.py  devtools_agent.py  utils.py
.codex/backups/tools-20251106-204230/devtools-scout/src/codex_tools/sites/: espn.py  overtime.py
.cursor/: worktrees.json
.github/: BRANCH_PROTECTION_SETUP.md  CI_CD.md  GIT_WORKFLOW_GUIDE.md  PR_WORKFLOW.md  dependabot.yml
archive/: CLEANUP_PLAN.md  mark_ratings_updated.py  python_file_inventory_project_only.txt  requirements.txt  scrapy.cfg  temp_results_analysis.py
cards/: wk-card-2025-10-31.json  wk-card-2025-11-08-ncaaf-friday.json
clickmaps/: nfl_clickmap.yaml
clients/: __init__.py  data_orchestrator.py  espn_api_client.py  models.py
commands/: backfill-nfl.json  bootstrap  cleanup-duplicates.json  massey-analyze.json  massey-games.json  massey-ratings.json  massey-scrape.json  power-ratings-status.json  scrape-injuries.cfb.json  scrape-injuries.nfl.json  scrape-nfl-week.json  scrape-vi  test-nfl.json  update-ratings.json  view-odds-nfl.sh  view-odds-team.sh  view-odds-today.sh  weather-card.dry-run.json  weather-single.json  weekly-nfl.json  wk-card  wk-card.dry-run.json  wk-card.run.json
data/: overtime-ag-playwright.txt  overtime_angular.js  overtime_bootstrap.js  overtime_core.js  overtime_libs.js  overtime_services.js  stadium_cache.json
database/: ENVIRONMENT_SETUP.md  README.md  nfl_extensions.sql  sample_queries.sql  schema.sql
docs/: ACTION_NETWORK_COLLECTION.md  ACTION_NETWORK_DATA_QUALITY_REPORT.md  ACTION_NETWORK_INTEGRATION.md  API_INTEGRATION_COMPLETE.md  ARCHITECTURE.md  BACKTEST_GUIDE.md  BILLY_WALTERS_METHODOLOGY.md  BOSTON_COLLEGE_DATA_EXAMPLE.md  CI_CD_STATUS_2025-11-23.md  CLI_REFERENCE.md  CODEBASE_CLEANUP_SUMMARY.md  CODEX_WORKFLOW.md  CODE_PATTERNS_COMPARISON.md  CODE_QUALITY_ASSESSMENT.md  COMPLETE_UPGRADE_ROADMAP.md  CORE_IMPLEMENTATION_SUMMARY.md  CUSTOM_POWER_RATING_ENGINE.md  CUSTOM_POWER_RATING_QUICK_REFERENCE.md  DATA_VALIDATION_GUIDE.md  DATA_VERIFICATION_COMPLETE.md  DEFENSIVE_RATING_FIX_SUMMARY.md  DOCUMENTATION_MAINTENANCE_GUIDE.md  E501_REDUCTION_PLAN.md  ESPN_DATA_QA_DELIVERABLES.md  ESPN_DATA_QA_QUICK_REFERENCE.md  ESPN_ENHANCEMENT_IMPLEMENTATION_SUMMARY.md  ESPN_INTEGRATION_COMPLETE.md  ESPN_Integration_Guide.md  ESPN_NCAAF_SCOREBOARD.md  ESPN_PRODUCTION_CHECKLIST.md  ESPN_PRODUCTION_QUICK_START.md  ESPN_QUICK_START_GUIDE.md  GIT_AND_SECRETS_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSPECTION_SUMMARY.md  INSPECTION_SUMMARY_2025-11-23.md  MACTION_PERFORMANCE_REPORT_2025-11-12.md  MCP_ARCHITECTURE.md  MCP_BEFORE_AFTER.md  MCP_QUICK_START.md  (+44 more)
examples/: complete_research_demo.py  complete_workflow_example.py  current_week_example.py  overtime_scraper_example.py  power_ratings_example.py  quick_wins_demo.py  scrape_overtime_odds.py  sitemap_extraction_example.py  test_market_monitor.py  test_overtime_integration.py  test_scrapy_bridge.py  verify_all.py
hooks/: 00-on_start.sh  10-guardrails.sh  20-quality.sh  30-pytest.sh
logs/: 2025-11-02-operations.md
output/: SUNDAY_MONITORING_CHECKLIST.txt  WEEK_12_BETTING_CARD_2025_11_23.txt  WEEK_12_SUNDAY_CLV_TRACKING.txt  efactor_calibration.db  overtime_live_nfl_20251110_181422.json  overtime_live_nfl_20251110_190053.json  overtime_nfl_odds_20251110_025533.json  overtime_nfl_odds_20251110_025702.json  overtime_nfl_odds_20251110_114630.json  overtime_nfl_odds_20251110_163851.json  overtime_nfl_odds_20251110_191451.json  overtime_nfl_odds_20251110_193904.json  overtime_nfl_odds_20251110_194202.json  overtime_nfl_raw_2025-11-10T03-02-39-173756.json  overtime_nfl_raw_2025-11-10T03-03-15-970255.json  (+9 more)
(+1556 files in other folders)
