[project]
name = "walters-analyzer"
version = "0.1.0"
description = "Billy Walters Sports Analyzer (WSA) — CLI + scraping skeleton using uv."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Andy + ChatGPT", email = "noreply@example.com" }]

# Base deps used by the CLI + scraper. Keep scrapy + scrapy-playwright here,
# and add playwright so the browser engine is present (you'll still run
# `playwright install chromium` once after syncing).
dependencies = [
    "orjson>=3.11.4",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "scrapy>=2.13.3",
    "scrapy-playwright>=0.0.44",
    "playwright>=1.47.0",
    "playwright-stealth>=1.0.6",
    "beautifulsoup4>=4.14.2",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
    "httpx>=0.28.1", # Consolidated HTTP client (replaced requests and aiohttp)
    "pytest-asyncio>=1.2.0",
    "signalrcore>=0.9.5",
    "websocket-client>=1.0.0",
    "tenacity>=8.2.0",
    "pandas>=2.3.3",
    "anthropic>=0.40.0", # Anthropic SDK for web_fetch integration
    "openai>=2.8.1",
    "jsonschema>=4.17.0", # For schema validation in knowledge graph
    # "robox",  # TODO: Uncomment when robox package is available (currently blocks CI)
    "lxml>=6.0.2",
]

[project.scripts]
walters-analyzer = "walters_analyzer.cli:main"

[project.optional-dependencies]
# Keep this extra for things that are helpful for auxiliary HTML parsing / retries,
# but are not strictly required to run the spider end-to-end.
scraping = [
  "beautifulsoup4>=4.12",
  "tenacity>=8.2",
]

# MCP Server dependencies for Claude Desktop integration
mcp = [
  "fastmcp>=0.2.0",
  "pydantic>=2.0",
  "aiohttp>=3.9",
  "uvicorn>=0.27",
]

# Machine Learning dependencies for autonomous agent
ml = [
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "numpy>=1.24",
  "pandas>=2.0",
]

# Deep Learning (optional, for advanced pattern recognition)
dl = [
  "torch>=2.0",
]

# Research API integrations
research = [
  "beautifulsoup4>=4.12",
  "lxml>=4.9",
]

# All AI/ML features (MCP + Autonomous Agent)
ai = [
  "fastmcp>=0.2.0",
  "pydantic>=2.0",
  "aiohttp>=3.9",
  "uvicorn>=0.27",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=4.9",
]

# Optional: a small, handy dev/test extra.
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.6.0",
  "requests>=2.31",  # For dev/investigation scripts only
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/walters_analyzer"]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.3",
]

[tool.ruff]
# Exclude directories that are not part of the main source code
exclude = [
    ".claude",
    ".codex",
    "data/_tmp",
    "review",
    "archive",  # Legacy code - not enforcing line length
    "src/data/archive",  # Legacy scrapers
    "__pycache__",
    ".git",
    ".pytest_cache",
    ".venv",
    "venv",
    "*.egg-info",
]

line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Pragmatic linting for legacy codebase
# NOTE: E501 (line-too-long) is ignored because we have 518 violations in legacy code.
# However, ruff format will auto-wrap new code at 88 chars, so new code will comply.
# For new files: aim for 88-char limit. Use `ruff format` to auto-format.
ignore = [
    "E402",  # Module level import not at top of file (needed for some dynamic imports)
    "E501",  # Line too long - auto-handled by ruff format for new code
    "E712",  # Comparison to True/False - stylistic preference in tests
    "E722",  # Bare except (legacy code, will fix incrementally)
    "E731",  # Lambda assignment (used for dynamic imports)
    "E741",  # Ambiguous variable name (legacy code)
    "F401",  # Unused imports in __init__.py and legacy code
    "F821",  # Undefined name (some files have broken imports)
    "F841",  # Unused local variable (legacy code)
    "W291",  # Trailing whitespace (formatting issue)
    "W293",  # Blank line contains whitespace (formatting issue)
]

# Select rules to enforce
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
]

# Per-file configuration
[tool.ruff.lint.per-file-ignores]
# Allow longer lines in scripts (utility/one-off code)
"scripts/**/*.py" = ["E501"]
"examples/**/*.py" = ["E501"]
"*.py" = ["E501"]  # Temporarily allow for root-level scripts

# Enforce stricter rules in core source code (future goal)
# "src/**/*.py" = []  # TODO: Remove E501 ignore when legacy code is cleaned up

[tool.pyright]
# Type checking configuration
include = ["src", "scrapers", "scripts", "tests", "examples"]
exclude = [
    ".claude",
    ".codex",
    "data/_tmp",
    "review",
    "**/__pycache__",
    "**/.pytest_cache",
    ".git",
    ".venv",
    "venv",
]

# Be lenient with type checking for legacy code
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportGeneralTypeIssues = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalOperand = false
reportOptionalSubscript = false
reportPrivateImportUsage = false
reportArgumentType = false
reportAssignmentType = false
reportAttributeAccessIssue = false
reportOperatorIssue = false
reportReturnType = false
reportPossiblyUnboundVariable = false
reportCallIssue = false
reportUnsupportedDunderAll = "warning"

# Only report critical issues
typeCheckingMode = "basic"
pythonVersion = "3.11"

# [tool.uv.sources]
# robox = { path = "../robox" }  # TODO: Uncomment when robox package is ready
