[project]
name = "codex-devtools-scout"
version = "0.1.0"
description = "Endpoint discovery & scoreboard extraction"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "playwright>=1.45,<1.55",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "pandas>=2.2",
  "pyarrow>=16",
  "beautifulsoup4>=4.12",
  "html5lib>=1.1",
]

# this creates the console script 'codex-devtools'
[project.scripts]
codex-devtools = "codex_tools.cli:app"

# use setuptools for a dead-simple src/ layout
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]